<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuCoordenadasButton"
        android:icon="@drawable/ay_lupita"
        android:title="Coordenadas"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menuOrdenButton"
        android:icon="@drawable/sort"
        android:title="Orden"
        app:showAsAction="always" />
    <item
        android:id="@+id/menuFilterButton"
        android:icon="@drawable/filter"
        android:title="Filtros"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menuItemInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/info" />
</menu>