<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvOrden"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:text="Orden:"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spnOrden"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvCombustible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"
        android:text="Combustible:"
        android:textSize="16sp" />

    <Spinner
        android:id="@+id/spnCombustible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>