<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvProvincia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:text="Provincia:"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spnProvincias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvLocalidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"
        android:text="Introduce una localidad (opcional)"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/etLocalidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Localidad" />

    <CheckBox
        android:id="@+id/cbAbierto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Abierto" />
</LinearLayout>